<resources>
    <string name="app_name">External Storage Example</string>
    <string name="back">Back</string>
    <string name="show_private_data">SHOW PRIVATE DATA</string>
    <string name="show_public_data">SHOW PUBLIC DATA</string>
    <string name="add_text">ADD TEXT</string>
    <string name="click_to_view">Click To View</string>
    <string name="save_as_private">SAVE AS PRIVATE</string>
    <string name="save_as_public">SAVE AS PUBLIC</string>
</resources>